safari overflow bug fixing attempt

--- a/client/src/pages/Portfolio/style.css
+++ b/client/src/pages/Portfolio/style.css
@@ -18,11 +18,13 @@
   overflow: hidden;
   border-radius: 50%;
   /* border: 1px solid white; */
-
   /* box-shadow: 100px 0px 50px rgba(2, 228, 231); */
   color: aliceblue;
   width: 70vw;
   height: 70vw;
+  /* safari-fix-overflow-border-radius */
+  z-index: 0;
+
 }
 .back {
   position: absolute;
